<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerInParent="true"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/care_image"
                    android:layout_width="160dp"
                    android:layout_height="130dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/whitepic"
                     />


            <RelativeLayout
                android:id="@+id/relativeLayout0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/care_image"
                android:layout_toEndOf="@+id/care_image"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/care"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:src="@drawable/sex"
                    android:tint="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/care_name"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/care_name"
                    android:layout_toRightOf="@+id/care"
                    android:layout_toEndOf="@+id/care"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/care"/>

                <TextView
                    android:id="@+id/care_sex"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/care_sex"
                    android:layout_toRightOf="@+id/care_name"
                    android:layout_toEndOf="@+id/care_name"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/care_name"/>

                <TextView
                    android:id="@+id/care_age"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/care_age"
                    android:layout_toRightOf="@+id/care_sex"
                    android:layout_toEndOf="@+id/care_sex"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/care_name"/>

                <TextView
                    android:id="@+id/age"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/age"
                    android:layout_toRightOf="@+id/care_age"
                    android:layout_toEndOf="@+id/care_age"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/care_name"/>



            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/care_image"
                android:layout_toEndOf="@+id/care_image"
                android:layout_below="@+id/relativeLayout0"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/date"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:src="@drawable/date"
                    android:tint="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/care_date"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/care_date"
                    android:layout_toRightOf="@+id/date"
                    android:layout_toEndOf="@+id/date"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/date"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/care_image"
                android:layout_toEndOf="@+id/care_image"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/time"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:src="@drawable/booking_starttime"
                    android:tint="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/care_time"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/care_time"
                    android:layout_toRightOf="@+id/time"
                    android:layout_toEndOf="@+id/time"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/time"/>



            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/care_image"
                android:layout_toEndOf="@+id/care_image"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/exp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:src="@drawable/happysearch"
                    android:tint="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/care_exp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/care_exp"
                    android:layout_toRightOf="@+id/exp"
                    android:layout_toEndOf="@+id/exp"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/exp"/>

                <ImageView
                    android:id="@+id/delete_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_alignBottom="@+id/care_exp"
                    android:clickable="true"
                    app:srcCompat="@drawable/delete"
                    tools:ignore="VectorDrawableCompat"
                    android:focusable="true" />


            </RelativeLayout>
            <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/relativeLayout4"-->

                <!--&gt;-->
                <!--<Button-->
                    <!--android:id="@+id/review"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="我要評論"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:background="@drawable/white_border"-->
                    <!--/>-->



            <!--</RelativeLayout>-->

        </RelativeLayout>

    </android.support.v7.widget.CardView>
