<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/human_image"
                        android:layout_width="130dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="25dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/bookdate"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:text="@string/comfirm_date"
                            android:textSize="18sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">



                        <Spinner
                            android:id="@+id/spn_time"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:textSize="22sp"
                            android:textAlignment="center" />

                    </LinearLayout>



                    <RelativeLayout
                        android:id="@+id/relativeLayout0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/ok"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@color/white"
                            android:padding="8dp"
                            android:src="@drawable/member"
                            android:tint="@color/colorPrimary"
                            />

                        <TextView
                            android:id="@+id/human_ava"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:text="可預約"
                            android:layout_toRightOf="@+id/ok"
                            android:layout_toEndOf="@+id/ok"
                            android:layout_alignParentTop="true"
                            android:layout_alignBottom="@+id/ok"/>



                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relativeLayout0.5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/clock"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@color/white"
                            android:padding="8dp"
                            android:src="@drawable/booking_starttime"
                            android:tint="@color/colorPrimary"
                            />

                        <TextView
                            android:id="@+id/human_time"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:text="早/晚班"
                            android:layout_toRightOf="@+id/clock"
                            android:layout_toEndOf="@+id/clock"
                            android:layout_alignParentTop="true"
                            android:layout_alignBottom="@+id/clock"/>



                    </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/care"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:src="@drawable/sex"
                    android:tint="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/human_name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/care_name"
                    android:layout_toRightOf="@+id/care"
                    android:layout_toEndOf="@+id/care"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/care"/>

                <TextView
                    android:id="@+id/human_sex"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/care_sex"
                    android:layout_toRightOf="@+id/human_name"
                    android:layout_toEndOf="@+id/human_name"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/care"/>

                <TextView
                    android:id="@+id/human_age"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/care_age"
                    android:layout_toRightOf="@+id/human_sex"
                    android:layout_toEndOf="@+id/human_sex"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/care"/>

                <TextView
                    android:id="@+id/age"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/age"
                    android:layout_toRightOf="@+id/human_age"
                    android:layout_toEndOf="@+id/human_age"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/care"/>



            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/exp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:src="@drawable/happysearch"
                    android:tint="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/human_exp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/care_exp"
                    android:layout_toRightOf="@+id/exp"
                    android:layout_toEndOf="@+id/exp"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/exp"/>



            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/price"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:src="@drawable/salary"
                    android:tint="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/human_price"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/care_price"
                    android:layout_toRightOf="@+id/price"
                    android:layout_toEndOf="@+id/price"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/price"/>


                <TextView
                    android:id="@+id/hour"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/care_hour"
                    android:layout_toRightOf="@+id/human_price"
                    android:layout_toEndOf="@+id/human_price"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/price"/>



            </RelativeLayout>

            <Button
                android:id="@+id/book_care"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="確認預約"
                android:background="@drawable/white_border"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/human_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>